# ManagePro

./: .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml  pytest.ini
app/: .env.example  create_fastapi_app.py  errors_handlers.py  main.py
app/actions/: create_superuser.py
app/admin/: admin.py
app/alembic/: env.py
app/alembic/versions/: 2025_05_06_0033-2e501c4c14b2_create_users_table.py  2025_05_06_0108-ac0f0fe4f412_create_access_tokens_table.py  2025_05_06_1404-e301f65cdbaa_update_users_table.py  2025_05_07_1149-857f57b91bcd_create_teams_table.py  2025_05_07_1349-1abf0864d3f7_create_all_table.py  2025_05_07_1516-0d99f9f6697a_create_all_table.py  2025_05_14_2025-d31774760a9c_upgrade_tasks_table.py
app/api/api_v1/: __init__.py  calendars.py  evaluations.py  fastapi_users.py  meetings.py  task_comments.py  tasks.py  teams.py  users.py
app/api/dependencies/: dependencies.py  params.py  (+1 more)
app/core/: config.py  permissions.py
app/crud/: calendars.py  evaluations.py  meetings.py  task_comments.py  tasks.py  teams.py  users.py
app/exceptions/: evaluation_exceptions.py  meeting_exceptions.py  role_exceptions.py  task_exceptions.py  team_exceptions.py  user_exceptions.py
app/templates/: base.html  index.html  navbar.html
app/views/: __init__.py
tests/: conftest.py
tests/test_api/: test_calendars.py  test_comments.py  test_evaluations.py  test_meetings.py  test_tasks.py  test_teams.py  test_users.py
tests/test_servises/: test_calendars.py  test_comments.py  test_evaluations.py  test_meetings.py  test_tasks.py  test_teams.py  test_users.py
(+64 files in other folders)
