[project]
name = "managepro"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.30.0",
    "fastapi[standard]>=0.115.12",
    "orjson>=3.10.18",
    "pydantic-settings>=2.9.1",
    "sqlalchemy[asyncio]>=2.0.40",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
]
