[project]
name = "managepro"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.15.2",
    "asyncpg>=0.30.0",
    "fastapi-users[sqlalchemy]>=14.0.1",
    "fastapi[standard]>=0.115.12",
    "orjson>=3.10.18",
    "pydantic-settings>=2.9.1",
    "sqladmin[full]>=0.20.1",
    "sqlalchemy[asyncio]>=2.0.40",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "httpx>=0.28.1",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
    "aiosqlite>=0.20.0",
    "factory-boy>=3.3.0",
    "faker>=25.0.0",
]
